# initia.proto

./: .gitignore  .gitmodules  README.md
.github/workflows/: npm-publish.yml
c/: .gitignore  Makefile
c/scripts/: proto-gen.sh
cpp/: .ccls  .gitignore  Makefile
cpp/cmake/: CMakeLists.txt
cpp/scripts/: proto-gen.sh
csharp/: .gitignore  Class1.cs  Makefile  README.md  initia-proto.csproj  initia-proto.sln  initia.proto.csproj  initia.proto.nuspec  initia.proto.sln  initia_proto.csproj
csharp/resources/: README.md
csharp/scripts/: proto-gen.sh
es/: package-lock.json  package.json
es/scripts/: prepare.sh  proto-gen.sh
java/: .gitignore  Makefile  build.gradle.kts  gradle.properties  settings.gradle.kts
java-alt/: Makefile  README.md
java-alt/scripts/: proto-gen.sh
java/grpc/: build.gradle.kts
java/kotlin/: build.gradle.kts
java/kotlin/grpc/: build.gradle.kts
java/scripts/: proto-gen.sh
js/: .gitignore  Makefile  README.md  package-lock.json  package.json  tsconfig.json
js/scripts/: prepare.sh  proto-gen.sh
python/: .gitignore  Makefile  README.md  pyproject.toml
python/scripts/: prepare.sh  proto-gen.sh
rs/: Cargo.toml  Makefile  README.md  build.rs
rs/scripts/: prepare.sh  proto-gen.sh
rs/src/: lib.rs  type_urls.rs
rs/src/prost/: cosmos.auth.v1beta1.rs  cosmos.authz.v1beta1.rs  cosmos.base.kv.v1beta1.rs  cosmos.base.query.v1beta1.rs  cosmos.base.reflection.v1beta1.rs  cosmos.base.snapshots.v1beta1.rs  cosmos.capability.v1beta1.rs  cosmos.crypto.multisig.v1beta1.rs  cosmos.crypto.secp256r1.rs  cosmos.genutil.v1beta1.rs  cosmos.gov.v1beta1.rs  cosmos.mint.v1beta1.rs  cosmos.staking.v1beta1.rs  cosmos.tx.signing.v1beta1.rs  cosmos.tx.v1beta1.rs  cosmos.vesting.v1beta1.rs  ibc.applications.transfer.v1.rs  (+9 more)
rust/: Cargo.toml  Makefile  build.rs
rust/builder/: Cargo.toml  build.rs
rust/initia-proto/: .gitignore  Cargo.toml
rust/initia-proto/src/: lib.rs  type_urls.rs
rust/src/: lib.rs
scripts/: getver.awk  prepare.sh  update-submodule.sh
swift/: .gitignore  Makefile
swift/scripts/: proto-gen.sh
unity/: .gitignore  Makefile  README.md  initia-unity-proto.csproj  initia-unity-proto.sln  initia.proto.unity.csproj  initia.proto.unity.sln
unity/scripts/: proto-gen.sh
(+448 files in other folders)
